# Ai_model_service

./: .gitignore  README.md  app.py
models/clustering/: README.md  model.json  pyproject.toml  requirements.txt
models/clustering/src/: app.py  classical_clustering.py  clustering.py  column_groups_definition.py  configs.json  feature_map.py  guided_clustering.py  main.py  utils.py
models/clustering/src/input/: input.json
models/clustering/src/plots/: cluster_stats.json
models/complex_audits_frauds/: app.py  config.py  evaluation_pipeline.py  example.ipynb  exploration.ipynb  feature_map.py  main.py  requirements.txt  shap_functions.py  training_pipeline.py  utils.py
models/complex_audits_frauds/input/: input.json
models/complex_audits_frauds/plotting/: plot_lifts.py  plot_rates.py
models/time_series_analysis/: README.md  pyproject.toml  requirements.txt
models/time_series_analysis/src/: app.py  configs.json  main.py  models.py  run_trend_outlier.py  time_series_analysis.py  utils.py
models/time_series_analysis/src/input/: input.json
