[tool.poetry]
name = "clustering"
version = "0.1.0"
description = "necessary libraries for clustering module"
authors = ["Marco"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
seaborn = "^0.13.2"
kneed = "^0.8.5"
interpretableai = "^2.11.2"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
numpy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
