[tool.poetry]
name = "time-series-analysis"
version = "0.1.0"
description = ""
authors = ["Marco"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
numpy = "2.0.0"
pandas = "^2.2.0"
cmdstanpy = "^1.2.5"
scikit-learn = "^1.6.0"
prophet = "^1.1.6"
plotly = "^5.24.1"
tsfresh = "^0.20.2"
xlrd = "^2.0.1"
scipy = "<1.15.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
